# frankentui

./: .gitignore  .ubsignore  AGENTS.md  CHANGELOG.md  Cargo.toml  FIXES_SESSION_GENERATION.md  FIXES_SUMMARY.md  README.md  REVIEW_REPORT.md  REVIEW_REPORT_FINAL.md  SESSION_TODO.md  UPGRADE_LOG.md  build-wasm.sh  claude-upgrade-progress.json  flamegraph_hotspots.md  frankentui_showcase_demo.html  heaptrack_analysis.md  perf_palette_5000.data.old  repro_ratio.rs  repro_ratio_overflow.rs
crates/doctor_frankentui/: Cargo.toml  TEST_MATRIX.md  VERIFICATION_REPORT.md
crates/doctor_frankentui/contracts/: opentui_confidence_model_v1.json  opentui_evidence_manifest_v1.json  opentui_licensing_provenance_v1.json  opentui_semantic_equivalence_v1.json  opentui_transformation_policy_v1.json
crates/doctor_frankentui/coverage/: README.md  baseline_summary.json  e2e_jsonl_schema.json  thresholds.toml
crates/doctor_frankentui/profiles/: analytics-empty.env  analytics-seeded.env  messages-seeded.env  tour-seeded.env
crates/doctor_frankentui/src/: abstract_interpretation.rs  adversarial_fixtures.rs  backend_capability.rs  capability_gap.rs  capture.rs  cli.rs  code_emission.rs  codegen_optimize.rs  composition_semantics.rs  corpus.rs  doctor.rs  effect_canonical.rs  effect_translator.rs  error.rs  fixture_taxonomy.rs  gap_triage.rs  harness.rs  import.rs  intent_inference.rs  ir_explainer.rs  ir_normalize.rs  ir_versioning.rs  keyseq.rs  lib.rs  lowering.rs  main.rs  mapping_atlas.rs  migration_ir.rs  module_graph.rs  profile.rs  redact.rs  report.rs  runmeta.rs  sandbox.rs  seed.rs  semantic_contract.rs  state_effects.rs  state_event_translator.rs  style_semantics.rs  style_translator.rs  (+7 more)
crates/doctor_frankentui/tests/: e2e_contract_gate.rs  ir_invariant_tests.rs  proptest_contract_invariants.rs  sandbox_redaction_tests.rs  seed_rpc_integration.rs  subprocess_orchestration_integration.rs  translation_pipeline_unit_tests.rs
crates/frankenterm-core/: Cargo.toml
crates/frankenterm-core/benches/: parser_patch_bench.rs
crates/frankenterm-core/src/: cell.rs  cursor.rs  flow_control.rs  grid.rs  lib.rs  modes.rs  parser.rs  patch.rs  scrollback.rs  terminal_engine.rs  ws_codec.rs
crates/frankenterm-core/tests/: conformance_fixtures.rs  differential_extras_reference.rs  differential_terminal.rs  model_check_terminal.rs  proptest_invariants.rs
crates/frankenterm-web/: Cargo.toml
crates/frankenterm-web/benches/: renderer_bench.rs
crates/frankenterm-web/src/: attach.rs  frame_harness.rs  glyph_atlas.rs  input.rs  lib.rs  markers.rs  patch_feed.rs  renderer.rs  scroll.rs  wasm.rs
crates/frankenterm-web/tests/: proptest_input_invariants.rs  rescale_repro_corpus.rs
crates/ftui/: Cargo.toml
crates/ftui-backend/: Cargo.toml
crates/ftui-backend/src/: lib.rs
crates/ftui-demo-showcase/: Cargo.toml
crates/ftui-demo-showcase/benches/: async_tasks_bench.rs  log_search_bench.rs  perf_hud_bench.rs  theme_studio_bench.rs
crates/ftui-demo-showcase/src/: app.rs  chrome.rs  cli.rs  data.rs  determinism.rs  lib.rs  main.rs  pane_interaction.rs  test_logging.rs  theme.rs  tour.rs  wasm_runner.rs
crates/ftui-demo-showcase/tests/: a11y_snapshots.rs  advanced_text_editor_ux_a11y.rs  async_tasks_e2e.rs  async_tasks_stress.rs  capability_sim_e2e.rs  chrome_hit_regions_e2e.rs  command_palette_e2e.rs  global_shortcuts_e2e.rs  golden_checksums.rs  golden_trace_corpus.rs  help_keybind_e2e.rs  i18n_e2e.rs  layout_lab_e2e.rs  log_search_e2e.rs  macro_recorder_determinism.rs  macro_recorder_e2e.rs  mega_showcase_e2e.rs  mermaid_showcase_pty.rs  mouse_playground_e2e.rs  perf_hud_e2e.rs  perf_hud_regression.rs  screen_snapshots.rs  snapshot_player_e2e.rs  terminal_e2e.rs  terminal_web_parity.rs  undo_e2e.rs  virtualized_search_e2e.rs  visual_effects_pty.rs
crates/ftui-harness/: Cargo.toml
crates/ftui-harness/examples/: minimal.rs  modal.rs  streaming.rs
crates/ftui-harness/src/: determinism.rs  flicker_detection.rs  frame_comparison.rs  golden.rs  input_storm.rs  lab_integration.rs  lib.rs  main.rs  pty_capture.rs  resize_storm.rs  time_travel.rs  time_travel_inspector.rs  trace_replay.rs
crates/ftui-harness/tests/: e2e_flicker_free_round_trip.rs  editor_perf.rs  editor_snapshots.rs  frame_drop_fault_injection.rs  golden_frame_e2e.rs  golden_frame_hash_parity.rs  golden_resize.rs  isomorphism_proofs.rs  no_flicker_fault_invariant.rs  pty_terminal_lifecycle.rs  reflow_snapshots.rs  regression_detection_accuracy.rs  resize_storm_e2e.rs  slo_schema_breach_detection.rs  soak_60fps_1000_widgets.rs  trace_replay.rs  widget_snapshots.rs
crates/ftui-i18n/: Cargo.toml
crates/ftui-i18n/src/: catalog.rs  lib.rs
crates/ftui-i18n/tests/: proptest_i18n_invariants.rs
crates/ftui-layout/: Cargo.toml
crates/ftui-layout/benches/: layout_bench.rs
crates/ftui-layout/src/: cache.rs  debug.rs  dep_graph.rs  grid.rs  incremental.rs  lib.rs  pane.rs  repro_investigation.rs  responsive.rs  responsive_layout.rs  visibility.rs  workspace.rs
crates/ftui-layout/tests/: coherence_bug.rs  e2e_incremental.rs  golden_incremental.rs  overflow_repro.rs  pane_invariant_fuzz.rs  pane_margin.rs
crates/ftui-pty/: Cargo.toml
crates/ftui-pty/src/: lib.rs  pty_process.rs  virtual_terminal.rs  ws_bridge.rs
crates/ftui-pty/tests/: pty_canonicalize.rs  vt_support_matrix_runner.rs
crates/ftui-runtime/: Cargo.toml
crates/ftui-runtime/benches/: ivm_bench.rs  telemetry_bench.rs  tick_strategy_bench.rs
crates/ftui-runtime/src/: allocation_budget.rs  asciicast.rs  bocpd.rs  cancellation.rs  conformal_alert.rs  conformal_frame_guard.rs  conformal_predictor.rs  cost_model.rs  countmin_sketch.rs  debug_trace.rs  degradation_cascade.rs  diff_evidence.rs  effect_system.rs  eprocess_throttle.rs  event_trace.rs  evidence_sink.rs  evidence_telemetry.rs  flake_detector.rs  input_fairness.rs  input_macro.rs  ivm.rs  lib.rs  locale.rs  log_sink.rs  program.rs  (+20 more)
crates/ftui-simd/: Cargo.toml
crates/ftui-style/: Cargo.toml
crates/ftui-terrain-wasm/: Cargo.toml
crates/ftui-text/: Cargo.toml
crates/ftui-widgets/: Cargo.toml
(+991 files in other folders)
