[package]
name = "doctor_frankentui"
version = "0.2.0"
edition = "2024"
publish = false
license-file = "../../LICENSE"
description = "Integrated TUI capture, seeding, suite reporting, and diagnostics for FrankenTUI agent workflows."
repository = "https://github.com/Dicklesworthstone/frankentui"
homepage = "https://github.com/Dicklesworthstone/frankentui"
documentation = "https://docs.rs/doctor_frankentui"
readme = "../../README.md"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.12"
chrono = { version = "0.4.40", features = ["clock", "serde"] }
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls"] }
wait-timeout = "0.2.1"
pathdiff = "0.2.3"
v_htmlescape = "0.15.8"
which = "8.0.0"
fastapi-output = { version = "0.2.0", default-features = false }
sqlmodel-console = "0.2.0"
sha2 = "0.10.9"
regex-lite = "0.1.6"

[dev-dependencies]
proptest = "1.7.0"
tempfile = "3.19.1"
