[package]
name = "frankenterm-core"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Host-agnostic VT/ANSI terminal engine: grid, parser, cursor, and scrollback."
repository = "https://github.com/Dicklesworthstone/frankentui"
homepage = "https://github.com/Dicklesworthstone/frankentui"
documentation = "https://docs.rs/frankenterm-core"
readme = "../../README.md"

[features]
default = []
ws-codec = ["dep:serde", "dep:serde_json"]

[dependencies]
bitflags = "2.10.0"
serde = { version = "1.0.227", features = ["derive"], optional = true }
serde_json = { version = "1.0.145", optional = true }
smallvec = "1.15.0"
unicode-width = "0.2.2"

[dev-dependencies]
ftui-pty = { path = "../ftui-pty" }
ftui-extras = { path = "../ftui-extras", features = ["terminal"] }
criterion = { version = "0.8.2", features = ["html_reports"] }
proptest = "1.6.0"
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"

[[bench]]
name = "parser_patch_bench"
harness = false
