[package]
name = "frankenterm-core"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "Terminal data model and VT parser for FrankenTUI."
repository = "https://github.com/Dicklesworthstone/frankentui"
documentation = "https://docs.rs/frankenterm-core"

[dependencies]
ftui-render = { path = "../ftui-render", version = "0.2.0" }
serde = { version = "1.0", features = ["derive"] }
bitvec = "1.0"
thiserror = "1.0"

[features]
default = []
ws-codec = [] # Placeholder for WebSocket codec support
