[package]
name = "ftui-backend"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Backend traits for FrankenTUI: platform abstraction for input, presentation, and time."
repository = "https://github.com/Dicklesworthstone/frankentui"
homepage = "https://github.com/Dicklesworthstone/frankentui"
documentation = "https://docs.rs/ftui-backend"
readme = "../../README.md"

[dependencies]
ftui-core = { path = "../ftui-core", version = "0.1.1" }
ftui-render = { path = "../ftui-render", version = "0.1.1" }
