[package]
name = "ftui-i18n"
version = "0.2.0"
edition = "2024"
license-file = "../../LICENSE"
description = "Localization catalog and interpolation utilities for FrankenTUI."
repository = "https://github.com/Dicklesworthstone/frankentui"
homepage = "https://github.com/Dicklesworthstone/frankentui"
documentation = "https://docs.rs/ftui-i18n"
readme = "../../README.md"

[dependencies]

[dev-dependencies]
proptest = "1.6.0"
