[package]
name = "ftui-layout"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Flex and grid layout solvers for FrankenTUI."
repository = "https://github.com/Dicklesworthstone/frankentui"
homepage = "https://github.com/Dicklesworthstone/frankentui"
documentation = "https://docs.rs/ftui-layout"
readme = "../../README.md"

[dependencies]
ftui-core = { path = "../ftui-core", version = "0.1.1" }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "layout_bench"
harness = false
