[package]
name = "ftui-layout"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "Flex and grid layout solvers for FrankenTUI."
repository = "https://github.com/Dicklesworthstone/frankentui"
homepage = "https://github.com/Dicklesworthstone/frankentui"
documentation = "https://docs.rs/ftui-layout"
readme = "../../README.md"

[dependencies]
ftui-core = { path = "../ftui-core", version = "0.2.0" }
rustc-hash = "2.1"
serde = { version = "1.0.227", features = ["derive"] }

[dev-dependencies]
blake3 = "1.6"
criterion = { version = "0.8.2", features = ["html_reports"] }
ftui-harness = { path = "../ftui-harness", version = "0.2.0" }
ftui-render = { path = "../ftui-render", version = "0.2.0" }
proptest = "1.7.0"
serde_json = "1.0.145"

[[bench]]
name = "layout_bench"
harness = false
