[package]
name = "ftui-pty"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "PTY-backed test utilities for FrankenTUI."
repository = "https://github.com/Dicklesworthstone/frankentui"
homepage = "https://github.com/Dicklesworthstone/frankentui"
documentation = "https://docs.rs/ftui-pty"
readme = "../../README.md"

[dependencies]
frankenterm-core = { path = "../frankenterm-core", version = "0.1.0", features = ["ws-codec"] }
ftui-core = { path = "../ftui-core", version = "0.1.1", features = ["crossterm"] }
portable-pty = "0.9.0"
serde_json = "1.0.145"
time = { version = "0.3.44", features = ["formatting"] }
tungstenite = "0.28.0"
unicode-width = "0.2"
