[package]
name = "ftui-simd"
version = "0.2.1"
edition = "2024"
license-file = "../../LICENSE"
description = "Optional safe SIMD-friendly optimizations for FrankenTUI."
repository = "https://github.com/Dicklesworthstone/frankentui"
homepage = "https://github.com/Dicklesworthstone/frankentui"
documentation = "https://docs.rs/ftui-simd"
readme = "../../README.md"

[dependencies]
