[package]
name = "ftui-style"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Style, theme, and color primitives for FrankenTUI."
repository = "https://github.com/Dicklesworthstone/frankentui"
homepage = "https://github.com/Dicklesworthstone/frankentui"
documentation = "https://docs.rs/ftui-style"
readme = "../../README.md"

[dependencies]
ftui-render = { path = "../ftui-render", version = "0.1.1" }
tracing = "0.1.41"
serde = { version = "1.0.227", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]

[dev-dependencies]
tracing-test = "0.2.5"
proptest = "1.7.0"
serde_json = "1.0.149"
