[package]
name = "ftui-terrain-wasm"
version = "0.1.0"
edition = "2024"
publish = false
description = "WASM terrain viewer using FrankenTUI braille rendering."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ftui-web = { path = "../ftui-web", version = "0.2.1", features = ["input-parser"] }
ftui-runtime = { path = "../ftui-runtime", version = "0.2.1" }
ftui-render = { path = "../ftui-render", version = "0.2.1" }
ftui-extras = { path = "../ftui-extras", version = "0.2.1", features = ["canvas"] }
ftui-core = { path = "../ftui-core", version = "0.2.1" }
ftui-widgets = { path = "../ftui-widgets", version = "0.2.1" }
ftui-layout = { path = "../ftui-layout", version = "0.2.1" }
web-time = "1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.85"
wasm-bindgen = "0.2.108"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
getrandom_04 = { package = "getrandom", version = "0.4.1", features = ["wasm_js"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]
