[package]
name = "ftui-text"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Text layout, wrapping, and grapheme width for FrankenTUI."
repository = "https://github.com/Dicklesworthstone/frankentui"
homepage = "https://github.com/Dicklesworthstone/frankentui"
documentation = "https://docs.rs/ftui-text"
readme = "../../README.md"

[features]
default = []
thread_local_cache = []
markup = ["dep:ftui-render"]
bidi = ["dep:unicode-bidi"]
normalization = ["dep:unicode-normalization"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(coverage)", "cfg(coverage_nightly)"] }

[dependencies]
ftui-layout = { path = "../ftui-layout", version = "0.1.0" }
ftui-style = { path = "../ftui-style", version = "0.1.0" }
ftui-render = { path = "../ftui-render", version = "0.1.0", optional = true }
unicode-display-width = "0.3.0"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.2"
smallvec = "1.15.1"
tracing = "0.1"
lru = "0.16.3"
rustc-hash = "2"
ropey = "1.6"
unicode-bidi = { version = "0.3", optional = true }
unicode-normalization = { version = "0.1", optional = true }

[dev-dependencies]
proptest = "1"
tracing-test = "0.2"
criterion = { version = "0.8.2", features = ["html_reports"] }
unicode-width = "0.2.2"

[[bench]]
name = "width_bench"
harness = false

[[bench]]
name = "search_bench"
harness = false
