[package]
name = "ftui-text"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Text layout, wrapping, and grapheme width for FrankenTUI."
repository = "https://github.com/Dicklesworthstone/frankentui"
homepage = "https://github.com/Dicklesworthstone/frankentui"
documentation = "https://docs.rs/ftui-text"
readme = "../../README.md"

[features]
default = []
thread_local_cache = []
markup = ["dep:ftui-render"]
bidi = ["dep:unicode-bidi"]
normalization = ["dep:unicode-normalization"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(coverage)", "cfg(coverage_nightly)"] }

[dependencies]
ftui-core = { path = "../ftui-core", version = "0.1.1" }
ftui-layout = { path = "../ftui-layout", version = "0.1.1" }
ftui-style = { path = "../ftui-style", version = "0.1.1" }
ftui-render = { path = "../ftui-render", version = "0.1.1", optional = true }
unicode-segmentation = "1.12.0"
smallvec = "1.15.1"
tracing = "0.1.41"
lru = "0.16.3"
rustc-hash = "2.1.1"
ropey = "1.6.1"
unicode-bidi = { version = "0.3.18", optional = true }
unicode-normalization = { version = "0.1.24", optional = true }

[dev-dependencies]
proptest = "1.7.0"
tracing-test = "0.2.5"
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "width_bench"
harness = false

[[bench]]
name = "search_bench"
harness = false

[[bench]]
name = "cache_bench"
harness = false
