[package]
name = "ftui-widgets"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Widget library built on FrankenTUI render and layout."
repository = "https://github.com/Dicklesworthstone/frankentui"
homepage = "https://github.com/Dicklesworthstone/frankentui"
documentation = "https://docs.rs/ftui-widgets"
readme = "../../README.md"

[features]
default = []
debug-overlay = []
regex-search = ["dep:regex"]
state-persistence = ["dep:serde"]
tracing = ["dep:tracing", "ftui-render/tracing"]

[dependencies]
bitflags = "2.10.0"
ftui-core = { path = "../ftui-core", version = "0.1.0" }
ftui-layout = { path = "../ftui-layout", version = "0.1.0" }
ftui-render = { path = "../ftui-render", version = "0.1.0" }
ftui-style = { path = "../ftui-style", version = "0.1.0" }
ftui-text = { path = "../ftui-text", version = "0.1.0", features = ["markup"] }
regex = { version = "1.12.3", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
tracing = { version = "0.1", optional = true }
unicode-segmentation = "1.12.0"
unicode-width = "0.2.2"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
proptest = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry"] }

[[bench]]
name = "widget_bench"
harness = false
